--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -61,7 +61,7 @@ span {
     color: white;
   }
   
-  .PinkSlipsInterface, .PinkSlipsInterface2 {
+  .PinkSlipsInterface {
     font-weight: 600;
     padding: 50px;
     background: pink;
