--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -383,3 +383,10 @@ span {
   box-shadow: 1px 0px 5px 0 rgb(255, 79, 211), 10px 5px 20px 0 rgba(255, 208, 208, 0.158);
 
 }
+
+
+@media (max-width: 700px) {
+  #AlphaAlert {
+    display: none;
+  }
+}
