--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -94,7 +94,7 @@ span {
     padding-left: 50px;
     padding-right: 50px;
     margin-top: 35px;
-    /* background-color: aliceblue; */
+    background-color: aliceblue;
     border-radius: 5px;
   }
   .BadgeSearch {
