--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -20,3 +20,27 @@
 .App-link {
   color: #09d3ac;
 }
+
+.Home {
+  text-align: center;
+}
+
+.Home-logo {
+  height: 40vmin;
+}
+
+.Home-header {
+  background-color: #e3ff42;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.Home-link {
+  color: #09d3ac;
+}
+
