--- a/client/src/css/badges.css
+++ b/client/src/css/badges.css
@@ -89,6 +89,18 @@
     font-family: "EmblemaOne";
 }
 
+.ColoredIDHeader {
+    background: linear-gradient(200deg,rgb(255, 255, 255) 23%, rgba(255,4,0,1) 24%, rgba(255,252,0,0.8) 35%, #01b439 42%, #00e2e2 46%, #00e2e2 48%, rgba(0,3,144,0.8) 55%, rgba(0,3,144,0.8) 57%, rgb(255, 123, 215) 60%,rgba(255, 123, 215, 1) 65%, rgba(255,255,255,1) 67%);
+}
+/*
+.ColoredIDHeader {
+    background: rgb(255,255,255);
+    background: linear-gradient(21deg,rgba(255,255,255,1) 12%,
+                rgba(255,0,0,1) 18%, rgba(255,252,0,1) 21%, rgba(4,89,213,1) 24%,
+                rgba(47,137,225,1) 27%, rgba(132,234,249,1) 28%, rgba(130,255,249,1) 30%,
+                rgba(55,215,71,1) 33%, rgba(245,255,72,1) 36%, rgba(247,218,72,1) 38%,
+                rgba(255,72,72,1) 41%, rgba(255,255,255,1) 46%);
+} */
 .pinkReason {
 
     z-index: 2;
